Pull real images and fix scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ html, body {
 }
 
 .demo-content .editor-preview-side {
-  width: 48%;
+  width: 50%;
 }
 
 .demo-content blockquote:after {
